hphp/hack/test/typecheck/array_sub.php.like_types.exp
File "array_sub.php", line 17, characters 10-16:
Invalid return type (Typing[4110])
File "array_sub.php", line 12, characters 46-54:
Expected ~array<T1> because it is an unenforceable type
File "array_sub.php", line 15, characters 5-13:
But got array<dynamic> because a value is appended to it
